# ardrone_ros

action/: CMakeLists.txt  package.xml
action/launch/: simple_action.launch
action/src/: action_client.cpp  action_server.cpp
ardrone_sim/: CMakeLists.txt  README  package.xml
ardrone_sim/cfg/: dynparams.cfg  dynparams.cfg~
ardrone_sim/launch/: ardrone_sim.launch  ardrone_sim.launch~  spawn_ardrone.launch  spawn_ardrone.launch~
ardrone_sim/rviz/: marker.rviz
ardrone_sim/src/: ardrone_sim_node.cpp
ardrone_sim/worlds/: mini_project.world~
dynrec/: CMakeLists.txt  package.xml
dynrec/cfg/: despose.cfg  dynparams.cfg  dynparams2.cfg
dynrec/src/: dynrec_node.cpp  poserror_node.cpp
intro_ros_2015/: CMakeLists.txt  package.xml
msg/: CMakeLists.txt  package.xml
service/: CMakeLists.txt  package.xml
service/src/: service_client.cpp  service_server.cpp
service/srv/: AddTwoInts.srv
simple_node/: CMakeLists.txt  package.xml
simple_node/src/: simple_node.cpp  simple_subscriber.cpp
